[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/dialog/DialogueBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/dialog/DialogueScene.gd" type="Script" id=2]
[ext_resource path="res://scenes/dialog/DialogParser.gd" type="Script" id=3]

[node name="DialogueScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.717647, 0.858824, 0.937255, 0.411765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="NinePatchRect" parent="."]
margin_left = 376.0
margin_top = 584.0
margin_right = 696.0
margin_bottom = 672.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="name"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogParser" type="Node" parent="."]
script = ExtResource( 3 )

[node name="DialogueBox" parent="DialogParser" instance=ExtResource( 1 )]
anchor_right = 5.08626e-07
margin_left = 239.236
margin_top = 600.81
margin_right = 839.235
margin_bottom = 800.81

[node name="main_char_1" type="Sprite" parent="DialogParser"]

[node name="main_char_2" type="Sprite" parent="DialogParser"]

[node name="side_char_1" type="Sprite" parent="DialogParser"]

[node name="side_char_2" type="Sprite" parent="DialogParser"]

[node name="Node2" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="automatic_dialogue_play_timer" type="Timer" parent="."]
one_shot = true

[connection signal="gui_input" from="." to="." method="_on_DialogueScene_gui_input"]
[connection signal="dialogue_end" from="DialogParser" to="." method="_on_DialogParser_dialogue_end"]
[connection signal="message_completed" from="DialogParser/DialogueBox" to="." method="_on_DialogueBox_message_completed"]
[connection signal="timeout" from="automatic_dialogue_play_timer" to="." method="_on_automatic_dialogue_play_timer_timeout"]

[editable path="DialogParser/DialogueBox"]
